tests/paczka1/fuzzy1/98741555.err
Error in line 2: BEmsSOrcjy5 A288 70,02
Error in line 5: BEmsSOrcjy5 A288 -1,3
Error in line 1: 4Zn A288 98,2
Error in line 4: 7HSWGiZ3 A247 20,4
Error in line 7: 4Zn A247 3,8
Error in line 9: 4Zn A385 86,3
Error in line 14: A288 A385 69,8
Error in line 13: 4Zn A247 64,6
Error in line 17: A288 A288 64,5
Error in line 18: BEmsSOrcjy5 A288 60,7
Error in line 28: 7HSWGiZ3 S936 27,4
